tests/snapshots/run_wpt_conformance__litert_pow_float32_4D_base_tensor_and_broadcastable_3D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow float32 4D base tensor and broadcastable 3D integer exponent tensor",
    "litert",
    "PASS",
)
