tests/snapshots/run_wpt_conformance__litert_pow_float32_5D_base_tensor_and_5D_integer_exponent_tensor.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 57
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pow.https.any.js",
    "pow float32 5D base tensor and 5D integer exponent tensor",
    "litert",
    "PASS",
)
