tests/snapshots/run_wpt_conformance__litert_prelu_float16_1D_non-constant_slope.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 69
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float16 1D non-constant slope, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f16[24];
    preluSlope: f16[24];
  }

  nodes {
    [preluOutput] = prelu(preluInput, preluSlope, label="");
  }

  outputs { preluOutput; }
}
